--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,14 @@
 # Normalize EOL for all files that Git considers text files.
 * text=auto eol=lf
+assets/HDRis filter=lfs diff=lfs merge=lfs -text
+assets/maps filter=lfs diff=lfs merge=lfs -text
+assets/materials filter=lfs diff=lfs merge=lfs -text
+assets/models filter=lfs diff=lfs merge=lfs -text
+assets/textures filter=lfs diff=lfs merge=lfs -text
+assets/ui filter=lfs diff=lfs merge=lfs -text
+assets/* filter=lfs diff=lfs merge=lfs -text
+assets/ filter=lfs diff=lfs merge=lfs -text
+*.so filter=lfs diff=lfs merge=lfs -text
+*.tscn filter=lfs diff=lfs merge=lfs -text
+entities/ filter=lfs diff=lfs merge=lfs -text
+images/ filter=lfs diff=lfs merge=lfs -text
