--- a/export_presets.cfg
+++ b/export_presets.cfg
@@ -1,6 +1,6 @@
 [preset.0]
 
-name="Linux"
+name="liunx"
 platform="Linux"
 runnable=true
 advanced_options=false
@@ -43,7 +43,7 @@ dotnet/embed_build_outputs=false
 
 [preset.1]
 
-name="Windows Desktop"
+name="windows"
 platform="Windows Desktop"
 runnable=true
 advanced_options=false
